# vibe-mate

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
docs/: product_design.md  system_design.md
docs/agents/: antigravity.md  claude-code.md  codex.md  gemini-cli.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: antigravity.rs  auth.rs  claude_code.rs  codex.rs  gemini_cli.rs  mod.rs
src-tauri/src/commands/: agent.rs  agent_auth.rs  agent_proxy.rs  config.rs  mod.rs  provider.rs  router.rs  system.rs
src-tauri/src/models/: agent.rs  agent_auth.rs  config.rs  mod.rs  provider.rs  routing_rule.rs
src-tauri/src/services/: agent.rs  agent_auth.rs  agent_proxy.rs  config.rs  mod.rs  provider.rs  proxy.rs  router.rs
src-tauri/src/storage/: config_store.rs  mod.rs
src/components/agents/: agent-card.tsx  agent-config.tsx  agent-status.tsx  claude-code-config.tsx  codex-config.tsx  gemini-cli-config.tsx  index.ts  terminal-output.tsx
src/components/layout/: index.ts  main-content.tsx  sidebar.tsx
src/components/providers/: agent-card.tsx  agent-provider-form.tsx  index.ts  provider-card.tsx  provider-form.tsx  provider-logo.tsx
src/components/quota/: agent-quota-card.tsx  index.ts  not-installed-agent-card.tsx
src/components/router/: default-provider.tsx  index.ts  new-rule-item.tsx  routing-rule-item.tsx  routing-rule-list.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  index.ts  input.tsx  label.tsx  progress.tsx  select.tsx  switch.tsx  tabs.tsx  toast.tsx  toaster.tsx  (+1 more)
src/hooks/: index.ts  use-agent-auth.ts  use-agent-proxy.ts  use-agents.ts  use-providers.ts  use-routing-rules.ts  use-tauri.ts  use-toast.ts
src/lib/: agents.ts  animations.ts  constants.ts
src/pages/: agent-config.tsx  agents.tsx  dashboard.tsx  index.ts  providers.tsx  quota.tsx  router.tsx  settings.tsx
src/stores/: agent-auth-store.ts  agent-store.ts  app-store.ts  index.ts  provider-store.ts  router-store.ts
src/types/: agent.ts  index.ts  network.ts  provider.ts  router.ts
