[package]
name = "vibe-mate"
version = "0.1.0"
description = "A desktop companion app for Vibe Coding workflow"
authors = ["you"]
edition = "2021"

[lib]
name = "vibe_mate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
glob = "0.3"
thiserror = "2"
anyhow = "1"
# HTTP proxy server dependencies
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"
tracing = "0.1"
log = "0.4"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
tauri-plugin-log = "2.8.0"

[dev-dependencies]
tempfile = "3"
